--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@actions/core": "^1.10.0",
     "@actions/github": "^5.1.1",
     "@octokit/action": "^6.0.6",
+    "dayjs": "^1.11.10",
     "https-proxy-agent": "7.0.2",
     "proxy-from-env": "1.1.0"
   },
